# SG_proj_003

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  api.py  app.py  augment_data.py  benchmark_report.md  check_versions.py  data_organizer_app.py  development_log.txt  implementation_plan.md  integration_pipeline.py  labeler.py  mypy_report.txt  push_fix.bat  pyproject.toml  requirements.txt  setup.py  train.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml  python-ci.yml
api/: main.py
apps/: data_organizer_app.py  surface_test_app.py
assets/: 피착재 종류 및 물성(AI화)2.xlsx
checkpoints/: v_sams_model.pth
docs/: ARCHITECTURE.md  PROJECT_PLAN.md
docs/guides/: data_collection_guide.md
docs/memos/: 260410 memo.txt  memo_260421.txt
docs/reports/: advanced_003_report.md  git_push_issue_report.md
examples/: integration_example.py
scratch/: read_excel.py  read_excel_glob.py  read_excel_head.py  test_surface_classification.py
scripts/: check_versions.py  recalculate_metadata.py  train_classifier.py
tests/: test_api.py  test_classifier.py  test_import.py  test_property_surface.py  test_substrate_db.py
tools/: data_organizer_app.py  validate_performance.py
utils/: download_datasets.py
vsams/: __init__.py  paths.py
vsams/analysis/: __init__.py  surface_evaluator.py
vsams/data/: __init__.py  substrate_properties.xlsx
vsams/models/: classifier.py  surface_classifier.joblib
vsams/scripts/: __init__.py  index_visual_db.py
vsams/utils/: db_handler.py  substrate_db.py
